# packages/openapi/api/src/models/SetupIntentResponse.ts
@@ -1,0 +1,58 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Iron Plans API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime'
+/**
+ *
+ * @export
+ * @interface SetupIntentResponse
+ */
+export interface SetupIntentResponse {
+  /**
+   *
+   * @type {string}
+   * @memberof SetupIntentResponse
+   */
+  clientSecret: string
+}
+
+export function SetupIntentResponseFromJSON(json: any): SetupIntentResponse {
+  return SetupIntentResponseFromJSONTyped(json, false)
+}
+
+export function SetupIntentResponseFromJSONTyped(
+  json: any,
+  ignoreDiscriminator: boolean
+): SetupIntentResponse {
+  if (json === undefined || json === null) {
+    return json
+  }
+  return {
+    clientSecret: json['client_secret'],
+  }
+}
+
+export function SetupIntentResponseToJSON(
+  value?: SetupIntentResponse | null
+): any {
+  if (value === undefined) {
+    return undefined
+  }
+  if (value === null) {
+    return null
+  }
+  return {
+    client_secret: value.clientSecret,
+  }
+}
