# packages/openapi/api/src/models/index.ts
@@ -5,8 +5,10 @@ export * from './AggregationEnum'
 export * from './BillingPeriodEnum'
 export * from './BulkCreateInviteRequest'
 export * from './Customer'
+export * from './CustomerConfirmCardRequest'
 export * from './CustomerPaymentIntentRequest'
 export * from './CustomerRequest'
+export * from './CustomerSetupIntentRequest'
 export * from './CustomerTokenResponse'
 export * from './Feature'
 export * from './FeatureRequest'
@@ -51,6 +53,7 @@ export * from './PublicProfile'
 export * from './RecordPeriodEnum'
 export * from './ReportUsageRequest'
 export * from './RoleEnum'
+export * from './SetupIntentResponse'
 export * from './Slug'
 export * from './StateEnum'
 export * from './Subscription'
